<resources>
    <string name="agent">Small butler</string>
    <string name="agent_dashclock_description">Displays which agents are running at all times.</string>
    <string name="accounts_description">Choose the calendars for Meeting Agent to monitor for events.  You must select at least one.</string>
    <string name="agent_action_delay">Delay</string>
    <string name="agent_action_restart">Start</string>
    <string name="agent_action_skip">Skip</string>
    <string name="agent_action_pause_manual">Manually stop</string>
    <string name="agent_action_manually_started">Manually started</string>
    <string name="agent_action_pause_battery">Don\'t conserve battery now</string>
    <string name="agent_action_pause_drive">I\'m not driving.</string>
    <string name="agent_activated">%1$s Agent has started.</string>
    <string name="agent_activated_meeting">A meeting (%s) was detected. Meeting Agent has started.</string>
    <string name="agent_activated_meeting_name_unknown">A meeting was detected. Meeting Agent has started.</string>
    <string name="agent_activated_meeting_name">Meeting: %s</string>
    <string name="agent_activity_blocker_disabled">This agent has never been enabled. Use the ON/OFF switch above to enable.</string>
    <string name="agent_config_blocker_disabled">Configuring is not allowed while an agent is disabled.\n\nEnable this agent using the ON/OFF switch in the menu bar in order to make configuration changes.</string>
    <string name="agent_config_blocker_started">Configuring is not allowed while an agent is actively running.\n\nStop this agent by clicking the status bar above in order to make configuration changes.</string>
    <string name="agent_confirm_manual_start">Manually start this agent?</string>
    <string name="agent_confirm_manual_stop">Stop this agent?</string>
    <string name="agent_confirm_manual_unpause">Restart this agent?</string>
    <string name="agent_manual_start_toast">%1$s Agent will continue to run until you manually stop it.</string>
    <string name="agent_confirm_sure">Are you sure?</string>
    <string name="agent_confirm_reset_hal">Are you sure?\n\n\"I know I\'ve made some very poor decisions recently, but I can give you my complete assurance that my work will be back to normal.\"\n</string>
    <string name="agent_contact_val_anyone">Anyone</string>
    <string name="agent_contact_val_custom">Custom List</string>
    <string name="agent_contact_val_mycontacts">My Contacts</string>
    <string name="agent_contact_val_noone">Pick</string>
    <string name="agent_contact_val_strangers_only">Strangers Only</string>
    <string name="agent_deactivated">%1$s Agent has finished.</string>
    <string name="agent_finished_sleep_agent">Sleep Agent has finished. Good morning!</string>
    <string name="agent_finished_battery_agent_percent">Battery Agent has finished.  Extended battery by %1$d minutes.</string>
    <string name="agent_installed">%1$s Agent was enabled.</string>
    <string name="agent_manual_start">MANUAL START</string>
    <string name="agent_menu_config">Configure</string>
    <string name="agent_menu_description">Info</string>
    <string name="agent_menu_parking">Parking Map</string>
    <string name="agent_not_enabled">DISABLED</string>
    <string name="agent_paused">%1$s Agent has been manually stopped.</string>
    <string name="agent_unpaused">%1$s Agent has been manually started.</string>
    <string name="agent_setup_enable">Enabling agents.</string>
    <string name="agent_started_title_battery_manual">Battery Agent Started</string>
    <string name="agent_started_title_battery">Low Battery Detected</string>
    <string name="agent_started_title_sleep_manual">Sleep Agent Started</string>
    <string name="agent_started_title_sleep">It\'s Bedtime</string>
    <string name="agent_started_title_meeting_manual">Meeting Agent Started</string>
    <string name="agent_started_title_meeting">Meeting Detected</string>
    <string name="agent_started_title_drive_manual">Drive Agent Started</string>
    <string name="agent_started_title_drive">Driving Detected</string>
    <string name="agent_started_parking_agent">Parking Agent has detected a car stopping.</string>
    <string name="agent_started_parking_manual">Saving current parking location in the background.  It will take ~12 seconds.</string>
    <string name="agent_started_sleep_agent">Sleep Agent has started. Sleep tight!</string>
    <string name="agent_delayed_title_sleep">Sleep Agent delayed</string>
    <string name="agent_delayed_message_sleep">Sleep agent will wait for you start it.</string>
    <string name="agent_delayed_title_meeting">Meeting Agent delayed</string>
    <string name="agent_delayed_message_meeting">Meeting agent will wait for you start it.</string>
    <string name="agent_status_activated">STARTED</string>
    <string name="agent_status_bar_disabled">Disabled. This agent will not start unless enabled.</string>
    <string name="agent_status_bar_enabled_battery_agent">Starts when your battery runs low.</string>
    <string name="agent_status_bar_enabled_drive_agent">Starts when you next drive.</string>
    <string name="agent_status_bar_enabled_meeting_agent">Meeting Agent is waiting for your next meeting to begin.</string>
    <string name="agent_status_bar_enabled_parking_agent">Waiting for the next time your car stops.</string>
    <string name="agent_status_bar_enabled_sleep_agent">Starts when you next go to sleep.</string>
    <string name="agent_status_bar_enabled_status_agent">See what your friends are doing</string>
    <string name="agent_status_bar_started">Started. Click to stop.</string>
    <string name="agent_status_bar_started_manual">Manually started.  Will not stop by itself.  Click here to stop.</string>
    <string name="agent_status_bar_started_battery_agent">Started. Conserving battery. Click to skip this time.</string>
    <string name="agent_status_bar_started_drive_agent">Started. Helping you keep your eyes on the road. Click to skip this time.</string>
    <string name="agent_status_bar_started_meeting_agent">Started. Silencing your phone. Click to pause.</string>
    <string name="agent_status_bar_started_sleep_agent">Started. Blocking unimportant interruptions. Click to pause.</string>
    <string name="agent_status_bar_paused_sleep_agent">Paused until you next go to sleep.  Click to unpause now.</string>
    <string name="agent_status_bar_paused_meeting_agent">Paused for current meeting.  Click to unpause now.</string>
    <string name="agent_status_installed">ENABLED</string>
    <string name="agent_status_idle">IDLE</string>
    <string name="agent_status_paused">PAUSED</string>
    <string name="agent_uninstall_confirm">WARNING!</string>
    <string name="agent_uninstall_confirm_warning">If you proceed, this agent:\n\n• will lose all its settings.\n\n• will not start again until reenabled.\n</string>
    <string name="agent_uninstall_confirm_warning_nochange">If you proceed, this agent will not start again until reenabled.\n</string>
    <string name="agent_uninstalled">%1$s Agent was disabled.</string>
    <string name="agent_updated_text">(Text Saved.)</string>
    <string name="agent_updating_settings">Updating settings…</string>
    <string name="agent_was_installed">Agent was installed.</string>
    <string name="agent_welcome_ss">Agent is a collection of 5 utilities that will make your phone smarter.</string>
    <string name="agent_confirm">CONFIRM</string>
    <string name="day_friday">F</string>
    <string name="day_monday">M</string>
    <string name="day_saturday">Sa</string>
    <string name="day_sunday">Su</string>
    <string name="day_thursday">Th</string>
    <string name="day_tuesday">Tu</string>
    <string name="day_wednesday">W</string>
    <string name="help_header_intro">Introduction</string>
    <string name="help_header_text">Agent is a utility application, that makes your phone behave the way you want it to, when you want it to.\r\n\r\nIt uses the sensors on your phone (like the accelerometer, GPS, Bluetooth connections etc.) to determine what you\'re doing, and then changes your phone\'s behavior in response.\r\n\r\nOur hope is that by making your phone behave the way you want it to, we can help you love your phone that much more.</string>
    <string name="help_battery_intro">Battery Agent</string>
    <string name="help_battery_text"><b>Battery Agent</b> helps you conserve battery.  It starts when your battery level drops below a level of your choosing.  You can configure it to:</string>
    <string name="help_battery_list">
<![CDATA[
	&#8226; Turn off Bluetooth.<br/>
	&#8226; Turn off wifi.<br/>
	&#8226; Turn off mobile data.<br/>
	&#8226; Dim your screen.<br/>
	&#8226; Pause auto-sync [note: this will NOT prevent you from getting texts and calls. It simply stop your apps from syncing in the background].<br/>
	&#8226; Revert back to normal settings when your battery level goes over that trigger initial percentage.<br/>
]]>
    </string>
    <string name="help_sleep_intro">Sleep Agent</string>
    <string name="help_sleep_text"><b>Sleep Agent</b> will silence your phone automatically when you go to sleep. You can configure the following:</string>
    <string name="help_sleep_list">
<![CDATA[
	&#8226; Sleeping times.<br/>
	&#8226; Minutes of inactivity before starting.<br/>
	&#8226; Auto response to callers and texters during your sleeping hours.<br/>
	&#8226; List of contacts that can wake you.<br/>
]]>
    </string>
    <string name="help_parking_intro">Parking Agent</string>
    <string name="help_parking_text"><b>Parking Agent</b> remembers where you parked.  It does this by storing the location every time it detects motion similar to a car stopping. You also have the option to configure a Bluetooth device. It displays the last ten times your car has stopped, and shows each one on a map inside the app.</string>
    <string name="help_meeting_intro">Meeting Agent</string>
    <string name="help_meeting_text"><b>Meeting Agent</b> syncs with your calendar to silence your phone when you don’t want to be disturbed.  It is started by events on your calendar.  It can be configured to: </string>
    <string name="help_meeting_list">
<![CDATA[
	&#8226; Start for busy events only.<br/>
	&#8226; Respond to events in certain hour / day ranges only.<br/>
	&#8226; Allow certain calls and messages through when you are busy.<br/>
]]>
    </string>
    <string name="help_drive_intro">Drive Agent</string>
    <string name="help_drive_text"><b>Drive Agent</b> eliminates driver distraction.  It is started by Bluetooth or motion detection (beta feature). It can be configured to: </string>
    <string name="help_drive_list">
<![CDATA[
	&#8226; Silence your phone.<br/>
	&#8226; Read SMS messages aloud.<br/>
	&#8226; Auto respond to texters and callers to let them know you’re driving (editable message).<br/>
	&#8226; Only respond to your own hand-picked list.<br/>
	&#8226; Reply to those not in your contact list.<br/>
]]>
    </string>
    <string name="satisfaction_header">Quick Question</string>
    <string name="satisfaction_subheader">We\'re keen to know!!</string>
    <string name="satisfaction_question">How do you feel about Agent?</string>
    <string name="satisfaction_love">I love it.</string>
    <string name="satisfaction_like">I like it.</string>
    <string name="satisfaction_dont_like">It needs work.</string>
    <string name="agent_info_prompt">How\'s that sound?</string>
    <string name="agent_info_in">I\'m in!</string>
    <string name="agent_info_no">Never do this</string>
    <string name="notification_confirmation_title">About notification setting</string>
    <string name="notification_confirmation_message">We will inform you of new function updates and so on.</string>
    <string name="yes_recommended">Yes (recommended)</string>
    <string name="set_later">To set it later</string>
    <string name="do_not_display">Do not display again</string>
</resources>