<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="@dimen/_75sdp"
    android:background="@android:color/black"
    android:padding="@dimen/_10sdp">
    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_confirmation_title"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notification_confirmation_message"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15sdp"
        android:padding="@dimen/_5sdp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_3sdp">

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/yes_recommended"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/buttonLater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/set_later"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/buttonDoNotDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/do_not_display"
            android:textAllCaps="false"
            android:textColor="@android:color/black" />
    </LinearLayout>

</LinearLayout>