<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent"
	android:background="@color/BGColor" android:orientation="vertical">

	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:background="#ddd"
		android:orientation="vertical" android:padding="18dp">

		<com.mobiroo.n.sourcenextcorporation.tagstand.util.TextViewRobotoCondensedBold
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/satisfaction_header" android:textColor="@color/TextColor"
			android:textSize="30sp" />

		<com.mobiroo.n.sourcenextcorporation.tagstand.util.TextViewRobotoLight
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:text="@string/satisfaction_subheader" android:textColor="@color/TextColor"
			android:textSize="12sp" />
	</LinearLayout>
	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:background="@color/BGColor"
		android:orientation="vertical" android:padding="18dp">

		<com.mobiroo.n.sourcenextcorporation.tagstand.util.TextViewRobotoLight
			android:layout_width="match_parent" android:layout_height="wrap_content"
			android:text="@string/satisfaction_question"
			android:textColor="@color/TextColor" android:textSize="18sp" />
	</LinearLayout>

	<View android:layout_width="match_parent" android:layout_height="1dp"
		android:background="#333" />

	<com.mobiroo.n.sourcenextcorporation.tagstand.util.TextViewRobotoLight
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:paddingTop="12dp" android:paddingLeft="18dp"
		android:paddingRight="18dp" android:paddingBottom="12dp"
		android:clickable="true" android:text="@string/satisfaction_love"
		android:textColor="@color/TextColor" android:textSize="16sp"
		android:onClick="love" android:background="@drawable/item_default_clickable" />

	<View android:layout_width="match_parent" android:layout_height="1dp"
		android:background="#999" />

	<com.mobiroo.n.sourcenextcorporation.tagstand.util.TextViewRobotoLight
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:paddingTop="12dp" android:paddingLeft="18dp"
		android:paddingRight="18dp" android:paddingBottom="12dp"
		android:clickable="true" android:text="@string/satisfaction_like"
		android:textColor="@color/TextColor" android:textSize="16sp"
		android:onClick="like" android:background="@drawable/item_default_clickable" />

	<View android:layout_width="match_parent" android:layout_height="1dp"
		android:background="#999" />

	<com.mobiroo.n.sourcenextcorporation.tagstand.util.TextViewRobotoLight
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:paddingTop="12dp" android:paddingLeft="18dp"
		android:paddingRight="18dp" android:paddingBottom="12dp"
		android:clickable="true" android:text="@string/satisfaction_dont_like"
		android:textColor="@color/TextColor" android:textSize="16sp"
		android:onClick="dislike" android:background="@drawable/item_default_clickable" />

	<View android:layout_width="match_parent" android:layout_height="1dp"
		android:background="#333" />

</LinearLayout>